# minimal-music-keyboard

./: .gitignore  MinimalMusicKeyboard.sln  README.md  commit-message.txt
.squad/: .gitignore  decisions.md  routing.md  team.md
.squad/agents/ed/: charter.md  history.md
.squad/agents/faye/: charter.md  history.md
.squad/agents/gren/: charter.md  history.md
.squad/agents/jet/: charter.md  history.md
.squad/agents/ralph/: charter.md  history.md
.squad/agents/scribe/: charter.md  history.md
.squad/agents/spike/: charter.md  history.md
.squad/casting/: history.json  policy.json  registry.json
.squad/decisions/: decisions.md
.squad/decisions/inbox/: ed-vst-crackle.md  faye-bridge-load-ack-fix.md  faye-load-time-editor-diagnostics.md  faye-obxd-host-fix.md  faye-phase3-complete.md  faye-vst-crackle.md  faye-vst3-audit.md  faye-vst3-cpp-fixes.md  faye-vst3-editor-diagnostics.md  faye-vst3-gui-hosting.md  faye-vst3-lifetime-fixes.md  gren-phase2-final.md  gren-phase2-review.md  gren-vst3-review.md  jet-editor-hosting-cs.md  jet-phase1-fixes.md  jet-phase2-fixes.md  jet-phase4-complete.md  jet-tray-icon-fix.md  jet-vst3-csharp-fixes.md  jet-vst3-error-surfacing.md  jet-vst3-gui-scope.md
.squad/identity/: now.md  wisdom.md
.squad/log/: 2026-03-01T19_07_08Z-architecture-and-scaffold.md  2026-03-01T19_38_51Z-self-contained-fix.md  2026-03-11-220048-phase2-vst3bridge.md  2026-03-11-221501-phase2-approved.md  2026-03-11T20-20-19-vst3-revision-batch.md  2026-03-11T20-49-41Z-phase1-fixes-batch.md  2026-03-11T200055Z-vst3-work.md  2026-03-11T21-10-33Z-phase2-fixes.md  2026-03-11T21-21-03Z-phase3-phase4-complete.md  2026-03-11T22-11-06Z-phase3b-vst3-sdk.md  2026-03-11_214724-phase1-review-batch.md  2026-03-12-211104-obxd-vst3-fix.md  2026-03-12T07-14-41Z-vst3-audio-fix.md  2026-03-12T09_10_43Z-vst3-load-race-fix.md  2026-03-12T09_56_53Z-vst3-load-feedback-rebuild.md  2026-03-12T18-53-44Z-vst3-editor-diagnostics.md  2026-03-13T08-22-55Z-vst3-bridge-load-failure-hardening.md  2026-03-13T08-52-12Z-vst3-load-diagnostics-fix.md  2026-03-13T09-41-13Z-obxd-bridge-final.md
.squad/orchestration-log/: 2026-03-01T19_07_08Z-ed.md  2026-03-01T19_07_08Z-faye.md  2026-03-01T19_07_08Z-gren.md  2026-03-01T19_07_08Z-jet.md  2026-03-01T19_07_08Z-spike.md  2026-03-01T19_38_51Z-jet.md  2026-03-11-220048-faye-phase2.md  2026-03-11-221501-gren-phase2-final.md  2026-03-11-ed-phase4-fixes.md  2026-03-11-gren-phase3-review.md  2026-03-11T20-20-19-ed-baseline.md  2026-03-11T20-20-19-spike-v1.1.md  2026-03-11T20-49-41Z-jet-phase1-fixes.md  2026-03-11T20_06_33Z-faye.md  2026-03-11T20_06_33Z-gren.md  2026-03-11T20_06_33Z-spike.md  2026-03-11T21-10-33Z-jet-phase2-fixes.md  2026-03-11T21-21-03-faye-phase3.md  2026-03-11T21-21-03-jet-phase4.md  2026-03-11T22-11-06Z-agent-25-faye.md  2026-03-11T22-11-06Z-agent-26-gren.md  2026-03-11_214724-ed-phase1-build-verify.md  2026-03-11_214724-gren-phase1-review.md  2026-03-12-211104-faye.md  2026-03-12-211104-jet.md  2026-03-12T07-14-41Z-agent-29-faye-audit.md  2026-03-12T07-14-41Z-agent-30-jet-scope.md  2026-03-12T07-14-41Z-agent-31-faye-cpp-fixes.md  2026-03-12T07-14-41Z-agent-32-jet-csharp-fixes.md  2026-03-12T07-14-41Z-gren-review.md  2026-03-12T09_10_43Z-agent-36-faye.md  2026-03-12T09_10_43Z-agent-37-jet.md  2026-03-12T09_56_53Z-agent-39-faye.md  2026-03-12T09_56_53Z-agent-40-jet.md  2026-03-12T18-53-44Z-faye.md  2026-03-13T08-22-55Z-faye.md  2026-03-13T08-52-12Z-faye.md  2026-03-13T09-41-13Z-coordinator.md  2026-03-13T09-41-13Z-ed.md  2026-03-13T09-41-13Z-faye.md  (+3 more)
.squad/skills/native-helper-versioned-deploy/: SKILL.md
.squad/skills/vst3-controller-state-sync/: SKILL.md
.squad/skills/vst3-editor-diagnostics/: SKILL.md
docs/: architecture.md  phase1-code-review.md  phase2-code-review.md  phase3-code-review.md  phase3b-code-review.md  phase4-code-review.md  test-baseline.md  test-strategy.md  vst3-architecture-proposal.md  vst3-architecture-review-v1.1.md  vst3-architecture-review.md  vst3-dotnet-options.md
src/MinimalMusicKeyboard/: App.xaml  App.xaml.cs  MinimalMusicKeyboard.csproj  Program.cs  app.manifest
src/MinimalMusicKeyboard.Tests/: MinimalMusicKeyboard.Tests.csproj
src/MinimalMusicKeyboard/Core/: SingleInstanceGuard.cs
src/MinimalMusicKeyboard/Helpers/: DisposableExtensions.cs
src/MinimalMusicKeyboard/Interfaces/: IAudioEngine.cs  IInstrumentBackend.cs  IMidiDeviceService.cs
src/MinimalMusicKeyboard/Midi/: MidiDeviceInfo.cs
src/MinimalMusicKeyboard/Models/: AppSettings.cs  AudioDeviceInfo.cs  InstrumentButtonMapping.cs  InstrumentDefinition.cs  MidiEventArgs.cs
src/MinimalMusicKeyboard/Services/: AppLifecycleManager.cs  AudioEngine.cs  BridgeFaultedEventArgs.cs  InstrumentCatalog.cs  MidiDeviceService.cs  MidiInstrumentSwitcher.cs  SoundFontBackend.cs  TrayIconService.cs  Vst3BridgeBackend.cs
src/mmk-vst3-bridge/: CMakeLists.txt  README.md  vcpkg.json
src/mmk-vst3-bridge/src/: audio_renderer.cpp  audio_renderer.h  bridge.cpp  bridge.h  host_application.h  ipc_client.cpp  ipc_client.h  main.cpp  mmf_writer.cpp  mmf_writer.h
tests/MinimalMusicKeyboard.Tests/: AudioEngineIntegrationTests.cs  AudioEngineTests.cs  DisposalVerificationTests.cs  GlobalUsings.cs  InstrumentCatalogTests.cs  MidiDeviceServiceTests.cs  MinimalMusicKeyboard.Tests.csproj
(+4 files in other folders)
